--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-tqdm
-gensim
-nltk
+streamlit==1.38.0
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.9.2
+seaborn==0.13.2
+scikit-learn==1.5.1
+tqdm==4.66.5
+gensim==4.3.3  
+nltk==3.8.1
+
